log
Thu, Mar 27, 2025  2:40:09 PM: 
 tests:  0|6
total_score: 0/70
25021aa
Thu, Mar 27, 2025  2:41:34 PM: 
 list.c | 9 ++++++++-
 1 file changed, 8 insertions(+), 1 deletion(-)
 tests:  1|5
total_score: 10/70
3e09a35
Thu, Mar 27, 2025  2:42:51 PM: 
 list.c | 5 ++++-
 1 file changed, 4 insertions(+), 1 deletion(-)
In file included from test.c:5:0:
list.c: In function 'nextList':
list.c:51:1: error: control reaches end of non-void function [-Werror=return-type]
 }
 ^
cc1.exe: all warnings being treated as errors
Compilation failed
2502d94
Thu, Mar 27, 2025  2:43:46 PM: 
 list.c | 3 +++
 1 file changed, 3 insertions(+)
 tests:  5|4
total_score: 25/70
e2cd492
Thu, Mar 27, 2025  2:55:33 PM: 
 list.c | 8 +++++++-
 1 file changed, 7 insertions(+), 1 deletion(-)
 tests:  9|3
total_score: 35/70
b3f8089
Thu, Mar 27, 2025  2:57:43 PM: 
 list.c | 14 ++++++++++++++
 1 file changed, 14 insertions(+)
 tests:  10|2
total_score: 45/70
79d26bb
Thu, Mar 27, 2025  2:59:21 PM: 
 list.c | 15 +++++++++++++++
 1 file changed, 15 insertions(+)
 tests:  11|1
total_score: 55/70
4b7bf05
Thu, Mar 27, 2025  3:01:29 PM: 
 list.c | 17 ++++++++++++++++-
 1 file changed, 16 insertions(+), 1 deletion(-)
 tests:  11|1
total_score: 55/70
9ced8df
Thu, Mar 27, 2025  3:04:23 PM: 
 list.c | 12 ++++++++++++
 1 file changed, 12 insertions(+)
 tests:  12|0
total_score: 70/70
2449982
Thu, Mar 27, 2025 10:19:50 PM: 
 tests:  12|0
total_score: 70/70
2f98031
